[backend/frontend] refact